--- a/package.json
+++ b/package.json
@@ -20,21 +20,17 @@
   },
   "dependencies": {
     "@babel/core": "7.28.5",
-    "@babel/preset-env": "7.28.5"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.22",
-    "babel-loader": "^10.0.0",
-    "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^7.1.2",
-    "cssnano": "^7.1.2",
-    "html-webpack-plugin": "^5.6.5",
-    "mini-css-extract-plugin": "^2.9.4",
-    "postcss": "^8.5.6",
-    "postcss-loader": "^8.2.0",
-    "style-loader": "^4.0.0",
-    "webpack": "^5.103.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.2"
+    "@babel/preset-env": "7.28.5",
+    "autoprefixer": "10.4.22",
+    "babel-loader": "10.0.0",
+    "clean-webpack-plugin": "4.0.0",
+    "css-loader": "7.1.2",
+    "html-webpack-plugin": "5.6.4",
+    "mini-css-extract-plugin": "2.9.4",
+    "postcss-loader": "8.2.0",
+    "style-loader": "4.0.0",
+    "webpack": "5.102.1",
+    "webpack-cli": "6.0.1",
+    "webpack-dev-server": "5.2.2"
   }
 }
